Оновлено index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             живе світ довкола. І в цих коротких митях є справжній сенс. Все, що нам потрібно — це навчитися бачити
             ці
             миті
-            та цінувати їх. Адже саме з таких дрібниць і складається справжнє життя.</p>
+            та цінувати їх. Адже саме з таких дрібниць і складається справжнє життя тралалейло тралала.</p>
 
         <p>Життя — це нескінченна мозаїка моментів, де кожна дрібниця може стати визначальною. Ми прокидаємося
             вранці,
