--- a/pages/page.nav.html
+++ b/pages/page.nav.html
@@ -369,6 +369,23 @@
             ці
             миті
             та цінувати їх. Адже саме з таких дрібниць і складається справжнє життя.</p>
+        <p>Життя — це нескінченна мозаїка моментів, де кожна дрібниця може стати визначальною. Ми прокидаємося
+            вранці,
+            часто
+            не усвідомлюючи, який день попереду нас чекає. Випадкова зустріч, розмова з незнайомцем чи просто
+            натхнення
+            від
+            книги можуть змінити хід подій. Люди прагнуть щастя, але іноді не помічають, що воно поруч — у теплій
+            каві,
+            у
+            лагідному погляді, у затишку дому. Якщо зупинитися хоча б на мить і вдихнути на повні груди, можна
+            відчути,
+            як
+            живе світ довкола. І в цих коротких митях є справжній сенс. Все, що нам потрібно — це навчитися бачити
+            ці
+            миті
+            та цінувати їх. Адже саме з таких дрібниць і складається справжнє життя.</p>
+
 
         <em><a class="return" href="#return">Повертатися</a></em>
 
