--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@
 </head>
 
 <body>
-    
+
     <div class="bg-img"></div>
     <div class="bg-overlay"></div>
 
     <header class="header">
         <div class="container">
-            <div class="navbar">
-                <ul class="navbar-list">
-                    <li class="navbar-item"><a class="navbar-link" href="index.html">Головна</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="pages/articles.html">Статті</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="pages/catalog.html">Каталог</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="pages/contacts.html">Контакти</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="pages/page.nav.html">Навігація</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="pages/registraition.html">Реєстрація</a></li>
-                </ul>
-            </div>
+            <ul class="navbar-list">
+                <li><a class="navbar-link" href="index.html">Головна</a></li>
+                <li><a class="navbar-link" href="pages/articles.html">Статті</a></li>
+                <li><a class="navbar-link" href="pages/catalog.html">Каталог</a></li>
+                <li><a class="navbar-link" href="pages/contacts.html">Контакти</a></li>
+                <li><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
+                <li><a class="navbar-link" href="pages/page.nav.html">Навігація</a></li>
+                <li><a class="navbar-link" href="pages/registraition.html">Реєстрація</a></li>
+            </ul>
         </div>
     </header>
 
